compiler/typ/tests/fixtures/diagnostics/0547_functor_generative_constructor_mismatch_01.ml.infer.expected
File "0547_functor_generative_constructor_mismatch_01.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0547_functor_generative_constructor_mismatch_01 is not a valid module name.

File "0547_functor_generative_constructor_mismatch_01.ml", line 8, characters 20-29:
8 | let _ : B_alpha.t = A_alpha.T
                        ^^^^^^^^^
Error: The constructor A_alpha.T belongs to the variant type A_alpha.t
       but a constructor was expected belonging to the variant type B_alpha.t
